[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/dino_walking.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainPlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[node name="MainPlayer" type="KinematicBody2D"]
scale = Vector2( 0.520001, 0.520001 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -77, -53, -77, -36, -72, -36, -72, -19, -49, -18, -48, 6, -54, 6, -54, 24, -37, 25, -18, 42, -18, 60, -30, 66, -42, 66, -42, 84, -12, 84, 7, 55, 17, 54, 29, 66, 30, 77, 24, 78, 24, 84, 47, 84, 48, 77, 55, 77, 54, 67, 48, 66, 48, 60, 42, 60, 42, 43, 67, 24, 67, -36, 60, -36, 48, 11, 24, 11, 24, 6, 12, 5, -12, -18, -12, -48, -24, -60, -72, -60 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -77, -53, -77, -36, -72, -36, -72, -19, -49, -18, -48, 6, -54, 6, -54, 24, -37, 25, -18, 42, -18, 60, -30, 66, -42, 66, -42, 84, -12, 84, 7, 55, 17, 54, 29, 66, 30, 77, 24, 78, 24, 84, 47, 84, 48, 77, 55, 77, 54, 67, 48, 66, 48, 60, 42, 60, 42, 43, 67, 24, 67, -36, 60, -36, 48, 11, 24, 11, 24, 6, 12, 5, -12, -18, -12, -48, -24, -60, -72, -60 )

[node name="MainPlayer" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.75, 0.75 )
smoothing_enabled = true
smoothing_speed = 10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
